--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,8 @@
     "react-bootstrap": "^1.6.1",
     "react-countdown": "^2.3.2",
     "react-countdown-circle-timer": "^2.5.3",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.2",
     "react-icon": "^1.0.0",
     "react-icons": "^4.2.0",
